--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
@@ -119,10 +119,12 @@
     <Compile Include="Extensions\FileExtensions.cs" />
     <Compile Include="Helpers\ScrollViewerHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\WallpaperContext.cs" />
     <Compile Include="Services\IShareService.cs" />
     <Compile Include="Services\ISystemSettingService.cs" />
     <Compile Include="Services\ShareService.cs" />
     <Compile Include="Services\SystemSettingService.cs" />
+    <Compile Include="Services\WallpaperWithCacheService.cs" />
     <Compile Include="Utils\HashHelper.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\DetailViewModel.cs" />
