--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
     "FontAwesome.UWP": "4.5.0.8",
+    "Microsoft.EntityFrameworkCore.SQLite": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLightLibs": "5.3.0",
