--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
@@ -118,6 +118,11 @@
     <Compile Include="Design\WallpaperService.cs" />
     <Compile Include="Extensions\FileExtensions.cs" />
     <Compile Include="Helpers\ScrollViewerHelper.cs" />
+    <Compile Include="Migrations\20160601162849_MyFirstMigration.cs" />
+    <Compile Include="Migrations\20160601162849_MyFirstMigration.designer.cs">
+      <DependentUpon>20160601162849_MyFirstMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\WallpaperContextModelSnapshot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\WallpaperContext.cs" />
     <Compile Include="Services\IShareService.cs" />
