--- a/MSDevUnion.BingWallpaper/BingoWallpaper.BackgroundTask/BingoWallpaper.BackgroundTask.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.BackgroundTask/BingoWallpaper.BackgroundTask.csproj
@@ -112,6 +112,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BingoWallpaper.Configuration.Uwp\BingoWallpaper.Configuration.Uwp.csproj">
+      <Project>{ef7a98ec-6e80-4ead-9d5b-85e217545bcf}</Project>
+      <Name>BingoWallpaper.Configuration.Uwp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BingoWallpaper.Configuration\BingoWallpaper.Configuration.csproj">
+      <Project>{c689cc5e-e392-4b2d-82f0-a62dd31a673c}</Project>
+      <Name>BingoWallpaper.Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BingoWallpaper.Models\BingoWallpaper.Models.csproj">
       <Project>{0b0bf029-a7ea-44db-8ba4-3cb52e7d4093}</Project>
       <Name>BingoWallpaper.Models</Name>
