--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ITileService.cs" />
     <Compile Include="Services\IWallpaperService.cs" />
     <Compile Include="Services\WallpaperService.cs" />
   </ItemGroup>
