--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services.Uwp/BingoWallpaper.Services.Uwp.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services.Uwp/BingoWallpaper.Services.Uwp.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ScreenService.cs" />
     <Compile Include="Services\TileService.cs" />
     <EmbeddedResource Include="Properties\BingoWallpaper.Services.Uwp.rd.xml" />
   </ItemGroup>
