--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BingWallpaperService.cs" />
     <Compile Include="Services\IBingWallpaperService.cs" />
+    <Compile Include="Services\IScreenService.cs" />
     <Compile Include="Services\IShareService.cs" />
     <Compile Include="Services\ITileService.cs" />
     <Compile Include="Services\ILeanCloudWallpaperService.cs" />
