--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <Content Include="Assets\Fonts\Material-Design-Iconic-Font.ttf" />
+    <Content Include="Assets\Fonts\iconfont.ttf" />
     <None Include="project.json" />
     <PRIResource Include="Strings\en-US\Enums.resw" />
     <PRIResource Include="Strings\zh-CN\Enums.resw" />
