--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
@@ -1,9 +1,9 @@
 ﻿{
   "dependencies": {
     "FontAwesome.UWP": "4.5.0.8",
-    "Microsoft.EntityFrameworkCore.SQLite": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.0",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLightLibs": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.3",
