--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
@@ -10,6 +10,7 @@
     "UmengPlusAnalytics": "3.1.0",
     "Unity": "4.0.1",
     "WeChatSDK": "2.0.1",
+    "Win2D.uwp": "1.18.0",
     "WinRTXamlToolkit.UWP": "2.0.0"
   },
   "frameworks": {
