--- a/MSDevUnion.BingWallpaper/SoftwareKobo.Social.Sina.Weibo/SoftwareKobo.Social.Sina.Weibo.csproj
+++ b/MSDevUnion.BingWallpaper/SoftwareKobo.Social.Sina.Weibo/SoftwareKobo.Social.Sina.Weibo.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="WeiboAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeiboClient.cs" />
     <Compile Include="WeiboService.cs" />
     <EmbeddedResource Include="Properties\SoftwareKobo.Social.Sina.Weibo.rd.xml" />
   </ItemGroup>
